crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__harvest__harvest_ledger_list.snap
---
source: crates/engram-cli/tests/cli/snapshot/harvest.rs
expression: "f.run(&[\"harvest\", \"ledger\", \"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] harvest ledger list
exit: 0
--- stdout ---
[
  {
    "archive": null,
    "decision": "skipped",
    "harvested_at": "[TIMESTAMP]",
    "memories_created": 0,
    "memory_ids": [],
    "note": "Superseded by the daemon design note.",
    "session_id": "session-alpha",
    "stage": "collected"
  }
]
--- stderr ---
