crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__harvest__harvest_ledger_prune_dry_run.snap
---
source: crates/engram-cli/tests/cli/snapshot/harvest.rs
expression: "f.run(&[\"harvest\", \"ledger\", \"prune\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] harvest ledger prune
exit: 0
--- stdout ---
{
  "bytes_freed": 0,
  "bytes_remaining": 0,
  "dry_run": true,
  "pinned_bytes": 0,
  "pinned_count": 0,
  "removed": []
}
--- stderr ---
