crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__harvest__harvest_ledger_rm_after.snap
---
source: crates/engram-cli/tests/cli/snapshot/harvest.rs
expression: "f.run(&[\"harvest\", \"ledger\", \"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] harvest ledger list
exit: 0
--- stdout ---
[]
--- stderr ---
